src/footer/footer.scss
@import 'style/_fonts.scss';
@import 'style/_reset.scss';
@import 'style/_theme.scss';

.footer {
  background-color: $primary-light;
  color: $text-light;
  font-family: $cursive-font;
  font-size: 1.1em;
  padding: 40px 40px 30px 40px;
}
.footer small {
  display: block;
}
.footer__copyright {
  margin-top: 15px;
  text-align: center;
}
.footer__image {
  @extend .img-reset;
}
.footer__inner {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
.footer__inner > div {
  align-items: center;
  display: flex;
  flex-direction: column;
}
.footer__link {
  @extend .link-reset;
  
}
.footer__link + div {
  border-bottom: 2px solid transparent;
}
.footer__link:focus + div,
.footer__link:hover + div {
  border-bottom: 2px solid $primary;
}
@media (max-width: 449px) {
  .footer__inner {
    flex-direction: column;
  }
  .footer__inner > div:not(:last-child) {
    margin-bottom: 10px;
  }
}
@media (min-width: 450px) {
  .footer__inner {
    flex-direction: row;
  }
  .footer__inner > div:not(:last-child) {
    margin-right: 20px;
  }
}

